--- a/index.html
+++ b/index.html
@@ -30,49 +30,49 @@
         </div>
         <div class="row d-flex justify-content-around">
 
-            <div class="col-3 text-center boxSize">
+            <div id= "box1" class="col-3 text-center boxSize">
                 <h1>Box 1</h1>
             </div>
-            <div class="col-3 text-center boxSize">
+            <div id="box2" class="col-3 text-center boxSize">
                 <h1>Box 2</h1>
             </div>
-            <div class="col-3 text-center boxSize">
+            <div id="box3" class="col-3 text-center boxSize">
                 <h1>Box 3</h1>
             </div>
 
         </div>
         <div class="row d-flex justify-content-around mt-3">
-            <div class="col-3 text-center boxSize">
+            <div id="box4" class="col-3 text-center boxSize">
                 <h1>Box 4</h1>
             </div>
             <div class="col-3 boxSize">
                 <h2>Color Box Panel</h2>
                 <div class="mb-3">
                     <label for="boxNumber" class="form-label">Enter Box Number</label>
-                    <textarea class="form-control" id="boxNumber" rows="1"></textarea>
+                    <textarea class="form-control" id="userBoxInput" rows="1"></textarea>
                 </div>
                 <div class="mb-3">
                     <label for="changeColors" class="form-label">Enter Color to change</label>
-                    <textarea class="form-control" id="changeColor" rows="1"></textarea>
+                    <textarea class="form-control" id="userInputColor" rows="1"></textarea>
                 </div>
                 <div class="d-grid gap-2">
-                    <button class="btn btn-primary" type="button">Change Color</button>
-                    <button class="btn btn-primary" type="button">Reset all Box Colors</button>
+                    <button id="colorBtn" class="btn btn-primary" type="button">Change Color</button>
+                    <button id="resetBtn" class="btn btn-primary" type="button">Reset all Box Colors</button>
                 </div>
             </div>
-            <div class="col-3 text-center boxSize">
+            <div id="box5" class="col-3 text-center boxSize">
                 <h1>Box 5</h1>
             </div>
         </div>
         <div class="row d-flex justify-content-around mt-3">
 
-            <div class="col-3 text-center boxSize">
+            <div id="box6" class="col-3 text-center boxSize">
                 <h1>Box 6</h1>
             </div>
-            <div class="col-3 text-center boxSize">
+            <div id="box7" class="col-3 text-center boxSize">
                 <h1>Box 7</h1>
             </div>
-            <div class="col-3 text-center boxSize">
+            <div id="box8" class="col-3 text-center boxSize">
                 <h1>Box 8</h1>
             </div>
 
@@ -81,6 +81,7 @@
 
     <!-- Optional JavaScript; choose one of the two! -->
 
+    <script src="./scripts/app.js"></script>
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
