--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <div class="col-12">
                 <div class="p-5 mb-4 bg-light rounded-3">
                     <div class="container-fluid py-5">
+                        <h1>Roy Cade III (Trey)</h1>
                         <h1 class="display-5 fw-bold">JavaScript Quiz</h1>
                         <p class="col-md-8 fs-4">In this quiz you are to make it where you can type in the box number
                             and change the color of the inside of the box to any of the following colors.</p>
